# money-tracker-api

./: .editorconfig  .env.example  .gitignore  .gitmessage  .golangci.yml  .lintstagedrc.js  BUILD.bazel  MODULE.bazel  Makefile  Tiltfile  WORKSPACE.bazel  bun.lockb  deps.bzl  docker-compose.yml  go.mod  go.sum  go.work  go.work.example  install_tools.sh  package.json
.husky/: commit-msg
infra/docker/dev/: auth-service.Dockerfile
infra/helm/auth-service/charts/.helm_ls_cache/base_service/templates/: _configmap.yaml  _deployment.yaml  _helpers.tpl  _secrets.yaml
infra/helm/charts/auth-service/charts/: base-service-0.1.0.tgz
infra/helm/charts/auth-service/charts/.helm_ls_cache/base_service/templates/: _service.yaml
infra/helm/values/dev/: auth-service-values.yaml
migration/: main.go
protobuf/: BUILD.bazel  common.proto  user.proto  users.proto
protobuf/user/v1/: user.proto
protos/auth/v1/: auth.proto
scripts/: check_commit.sh  create_service.sh
services/api-gateway/: README.md
services/api-gateway/cmd/: main.go
services/api-gateway/internal/config/: config.go
services/api-gateway/internal/delivery/http/: auth.go  oauth_apple.go  oauth_facebook.go  oauth_google.go
services/api-gateway/internal/payload/: auth.go
services/auth/: .air.toml  BUILD.bazel  Dockerfile  go.mod  main.go
services/auth-service/: README.md
services/auth-service/cmd/: main.go
services/auth-service/internal/config/: config.go
services/auth-service/internal/delivery/grpc/: auth.go  oauth_apple.go  oauth_facebook.go  oauth_google.go
services/auth-service/internal/domain/: auth.go  user.go
services/auth-service/internal/handler/: auth.go
services/auth-service/internal/repository/: identity.go  session.go  user.go
services/auth-service/internal/repository/mongo/: identity.go  session.go  user.go
services/auth-service/internal/usecase/: auth.go  oauth_apple.go  oauth_facebook.go  oauth_google.go
services/auth-service/pkg/client/: client.go
services/auth-service/pkg/types/: types.go
services/auth/cmd/: main.go
services/auth/cmd/auth/: BUILD.bazel
services/auth/handler/: BUILD.bazel  http_handler.go
services/auth/internal/controller/: auth_http_controller.go  oauth_google_http_controller.go
services/auth/internal/repository/: auth_repository.go
services/auth/internal/usecase/: auth_usecase.go  oauth_google_usecase.go  usecase.go
services/auth/models/: BUILD.bazel  models.go
services/auth/server/: BUILD.bazel  http_server.go
services/auth/service/: BUILD.bazel  service.go
services/user/: BUILD.bazel  main.go
services/user/cmd/: main.go
services/user/handler/: BUILD.bazel  grpc_handler.go  http_handler.go
services/user/internal/controller/: grpc.go  http.go  user_grpc_controller.go
services/user/internal/repository/: repository.go  user_repository.go
services/user/internal/usecase/: usecase.go  user_usecase.go
services/user/models/: BUILD.bazel
services/user/repository/: BUILD.bazel  repository.go
services/user/server/: BUILD.bazel  grpc_server.go  http_server.go
services/user/service/: BUILD.bazel  service.go
services/users/: BUILD.bazel  go.mod  main.go
services/users/handler/: BUILD.bazel  grpc_handler.go  http_handler.go  register.go
services/users/models/: BUILD.bazel  models.go
services/users/repository/: BUILD.bazel  repository.go  repository_test.go
services/users/server/: BUILD.bazel  grpc_server.go  http_server.go
services/users/service/: BUILD.bazel  service.go
shared/auth/: jwt.go
shared/config/: BUILD.bazel  config.go
shared/constants/error_code/: BUILD.bazel  error_code.go
shared/contract/: http.go
shared/database/: BUILD.bazel  database.go  mongo.go
shared/discovery/: consul.go
shared/domain/: BUILD.bazel  auth.go  entities.go  response.go  user.go
shared/domain/app_error/: BUILD.bazel  app_error.go
shared/domain/response/: BUILD.bazel  response.go
shared/errors/: error_code.go
shared/logger/: BUILD.bazel  logger.go
shared/mapper/: BUILD.bazel  mapper.go
shared/middleware/: BUILD.bazel  middleware.go
shared/utilities/: http.go
shared/utils/databaseutil/: BUILD.bazel  databaseutil.go
shared/utils/error_util/: BUILD.bazel  error_util.go
shared/utils/grpcutil/: grpcutil.go
shared/utils/hashutil/: hashutil.go
shared/utils/jwt_util/: BUILD.bazel  jwt_util.go
shared/utils/password_util/: BUILD.bazel  password_util.go
shared/utils/path_util/: BUILD.bazel  path_util.go
shared/utils/pathutil/: BUILD.bazel  pathutil.go
shared/validator/: BUILD.bazel  validator.go
