"""This module defines the Bazel dependencies and settings for the money-tracker-api project."""

module(
    name = "money-tracker-api",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.10.0")
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "gazelle", version = "0.43.0")
bazel_dep(name = "protobuf", version = "30.2", repo_name = "com_google_protobuf")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.3")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_log",
    "com_github_data_dog_go_sqlmock",
    "com_github_go_playground_locales",
    "com_github_go_playground_universal_translator",
    "com_github_go_playground_validator_v10",
    "com_github_gofiber_fiber_v2",
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_uuid",
    "com_github_matthewhartstonge_argon2",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
)
