load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "userspb_proto",
    srcs = ["users.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "userspb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/protogen/userspb",
    proto = ":userspb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "userspb",
    embed = [":userspb_go_proto"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/protogen/userspb",
    visibility = ["//visibility:public"],
)
