load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/auth",
    visibility = ["//visibility:public"],
    deps = ["//services/auth/server"],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)
