load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "users_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/users",
    visibility = ["//visibility:private"],
    deps = ["//services/users/server"],
)

go_binary(
    name = "users",
    embed = [":users_lib"],
    visibility = ["//visibility:public"],
)
