load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "users_lib",
    srcs = ["main.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/users",
    visibility = ["//visibility:private"],
    deps = [
        "//services/users/server",
        "//shared/config",
        "//shared/database",
        "//shared/domain",
        "//shared/logger",
        "//shared/validator",
        "@com_github_charmbracelet_log//:log",
    ],
)

go_binary(
    name = "users",
    embed = [":users_lib"],
    visibility = ["//visibility:public"],
)

genrule(
    name = "copy_env",
    outs = [".env"],
    cmd = "cp $(location //:external_env) $@",
    tools = ["//:external_env"],
)

filegroup(
    name = "env_files",
    srcs = [":.env"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "app",
    srcs = [
        ":env_files",
        ":users",
    ],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/users"],
    tars = [":app"],
)

platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

oci_load(
    name = "load",
    image = ":transitioned_image",
    repo_tags = ["vasapolrittideah/money-tracker-api-users:latest"],
)
