load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/config",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/utils/path_util",
        "@com_github_charmbracelet_log//:log",
        "@com_github_spf13_viper//:viper",
    ],
)
