load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "database",
    srcs = ["database.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/database",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/config",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
