load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_charmbracelet_log//:log",
    ],
)
