load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mapper",
    srcs = ["mapper.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/mapper",
    visibility = ["//visibility:public"],
    deps = [
        "//protogen/users_proto",
        "//shared/domain",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
