load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["middleware.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/config",
        "//shared/domain/response",
        "//shared/utils/jwt_util",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@org_golang_google_grpc//codes",
    ],
)
