load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/auth/service",
    visibility = ["//visibility:public"],
    deps = [
        "//protogen/user",
        "//services/auth/models",
        "//shared/config",
        "//shared/domain",
        "//shared/domain/app_error",
        "//shared/logger",
        "//shared/mapper",
        "//shared/utils/jwt_util",
        "//shared/utils/password_util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
