load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repository",
    srcs = ["repository.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/user/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/domain",
        "//shared/domain/app_error",
        "//shared/utils/error_util",
        "@com_github_google_uuid//:uuid",
        "@io_gorm_gorm//:gorm",
    ],
)

go_test(
    name = "repository_test",
    srcs = ["repository_test.go"],
    embed = [":repository"],
    deps = [
        "//shared/domain",
        "@com_github_data_dog_go_sqlmock//:go-sqlmock",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//assert",
        "@io_gorm_driver_postgres//:postgres",
        "@io_gorm_gorm//:gorm",
    ],
)
