load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = [
        "http_handler.go",
        "register.go",
    ],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/users/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//services/users/models",
        "//services/users/service",
        "//shared/config",
        "//shared/constants/error_code",
        "//shared/domain",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)
