load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handler",
    srcs = [
        "grpc_handler.go",
        "http_handler.go",
    ],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/users/handler",
    visibility = ["//visibility:public"],
    deps = [
        "//protogen/users_proto",
        "//services/users/models",
        "//services/users/service",
        "//shared/config",
        "//shared/domain",
        "//shared/domain/app_error",
        "//shared/domain/response",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
