load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repository",
    srcs = ["repository.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/users/repository",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/domain",
        "//shared/domain/app_error",
        "//shared/utils/error_util",
        "@com_github_google_uuid//:uuid",
        "@io_gorm_gorm//:gorm",
    ],
)
