load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/services/users/service",
    visibility = ["//visibility:public"],
    deps = [
        "//services/users/repository",
        "//shared/config",
        "//shared/domain",
        "@com_github_google_uuid//:uuid",
    ],
)
