load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "error_code",
    srcs = ["error_code.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/constants/error_code",
    visibility = ["//visibility:public"],
)

go_library(
    name = "app_error",
    srcs = ["app_error.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/domain/app_error",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_google_grpc//codes"],
)
