load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "databaseutil",
    srcs = ["databaseutil.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/utils/databaseutil",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/constants/error_code",
        "@io_gorm_gorm//:gorm",
    ],
)
