load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "pathutil",
    srcs = ["pathutil.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/utils/pathutil",
    visibility = ["//visibility:public"],
    deps = ["@com_github_charmbracelet_log//:log"],
)

go_library(
    name = "path_util",
    srcs = ["path_util.go"],
    importpath = "github.com/vasapolrittideah/money-tracker-api/shared/utils/path_util",
    visibility = ["//visibility:public"],
    deps = ["@com_github_charmbracelet_log//:log"],
)
